RESOLVED FIXED43338
Compile fix for android, missing guards in SVGResourcesCycleSolver.cpp
https://bugs.webkit.org/show_bug.cgi?id=43338
Summary Compile fix for android, missing guards in SVGResourcesCycleSolver.cpp
Kristian Monsen
Reported 2010-08-02 05:17:10 PDT
Android does not have FILTERS enabled and does not compile without this fix.
Attachments
Proposed patch. (1.27 KB, patch)
2010-08-02 05:22 PDT, Kristian Monsen
steveblock: review-
Proposed patch (Updated Changelog description). (1.36 KB, patch)
2010-08-02 05:51 PDT, Kristian Monsen
no flags
Kristian Monsen
Comment 1 2010-08-02 05:22:35 PDT
Created attachment 63193 [details] Proposed patch.
Steve Block
Comment 2 2010-08-02 05:27:55 PDT
Comment on attachment 63193 [details] Proposed patch. Code looks fine, but this can't be landed with an OOPS in the tests line. Just say this is a build fix only. Also, it would be good to link to the change that added this from the bug.
Kristian Monsen
Comment 3 2010-08-02 05:51:58 PDT
Created attachment 63204 [details] Proposed patch (Updated Changelog description).
Steve Block
Comment 4 2010-08-02 05:58:34 PDT
Comment on attachment 63204 [details] Proposed patch (Updated Changelog description). r=me
WebKit Commit Bot
Comment 5 2010-08-02 09:18:06 PDT
Comment on attachment 63204 [details] Proposed patch (Updated Changelog description). Clearing flags on attachment: 63204 Committed r64465: <http://trac.webkit.org/changeset/64465>
WebKit Commit Bot
Comment 6 2010-08-02 09:18:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.