2010-08-02  Kristian Monsen  <kristianm@google.com>

Reviewed by Steve Block.

        Compile fix for Android, adding guards around filter specific code.
        https://bugs.webkit.org/show_bug.cgi?id=43338
        This CL introduced the code:
        http://trac.webkit.org/changeset/64196

        Compile fix only, no new tests.

        * rendering/SVGResourcesCycleSolver.cpp:
        (WebCore::SVGResourcesCycleSolver::breakCycle):

Canonical link: https://commits.webkit.org/55287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64465 268f45cc-cd09-0410-ab3c-d52691b4dbfc